--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body class="dark-theme">
         <div>
         <button class="btn ">Connect</button>
+        <p>Here</p>
         </div>
-  <div> <p id="msg">Value</p>
-  </div>
-          
       <script src="app.js" charset="utf-8"></script>
       <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
