--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="dark-theme">
         <div>
         <button class="btn ">Connect</button>
-        <p>Here</p>
+        <p id='boldStuff' >Here</p>
         </div>
       <script src="app.js" charset="utf-8"></script>
       <noscript>You need to enable JavaScript to view the full site.</noscript>
